RESOLVED FIXED115463
[Mac] WebKit doesn't enable or disable autocorrections when system preferences are changed
https://bugs.webkit.org/show_bug.cgi?id=115463
Summary [Mac] WebKit doesn't enable or disable autocorrections when system preference...
Ryosuke Niwa
Reported 2013-04-30 21:22:25 PDT
When the user changes system preferences to enable or disable text replacement and spellchecking features, we should be reflecting those changes instead of caching the values set at the time WebView was created.
Attachments
Work in progress (3.56 KB, patch)
2013-04-30 21:23 PDT, Ryosuke Niwa
no flags
Work in progress 2 (11.06 KB, patch)
2013-04-30 22:45 PDT, Ryosuke Niwa
no flags
Work in progress 3 (13.81 KB, patch)
2013-05-01 01:12 PDT, Ryosuke Niwa
no flags
Fixes the bug (19.63 KB, patch)
2013-05-01 02:11 PDT, Ryosuke Niwa
no flags
Updated per Sam's comments (19.20 KB, patch)
2013-05-01 16:50 PDT, Ryosuke Niwa
no flags
Updated per Sam's in-person review (19.20 KB, patch)
2013-05-01 17:42 PDT, Ryosuke Niwa
no flags
Ryosuke Niwa
Comment 1 2013-04-30 21:23:04 PDT
Created attachment 200201 [details] Work in progress
Ryosuke Niwa
Comment 2 2013-04-30 22:45:38 PDT
Created attachment 200203 [details] Work in progress 2
Ryosuke Niwa
Comment 3 2013-05-01 01:12:25 PDT
Created attachment 200205 [details] Work in progress 3
Ryosuke Niwa
Comment 4 2013-05-01 02:11:13 PDT
Created attachment 200206 [details] Fixes the bug
Ryosuke Niwa
Comment 5 2013-05-01 02:23:03 PDT
Ryosuke Niwa
Comment 6 2013-05-01 16:50:32 PDT
Created attachment 200256 [details] Updated per Sam's comments
Darin Adler
Comment 7 2013-05-01 17:15:17 PDT
Comment on attachment 200256 [details] Updated per Sam's comments View in context: https://bugs.webkit.org/attachment.cgi?id=200256&action=review > Source/WebKit2/ChangeLog:13 > + (WebKit): > + (TextChecker): Should remove these, or fix the script so they don’t get added in the first place. > Source/WebKit2/ChangeLog:15 > + (WebContext): Ditto. > Source/WebKit2/ChangeLog:18 > + (WebKit): Ditto. > Source/WebKit2/UIProcess/mac/WebContextMac.mm:555 > + [[NSNotificationCenter defaultCenter] removeObserver:(id)m_automaticTextReplacementNotificationObserver.get()]; Can’t these be RetainPtr<NSObject> instead of RetainPtr<CFTypeRef>, to avoid all these (id) casts?
Ryosuke Niwa
Comment 8 2013-05-01 17:42:33 PDT
Created attachment 200291 [details] Updated per Sam's in-person review
Ryosuke Niwa
Comment 9 2013-05-01 17:46:47 PDT
Comment on attachment 200291 [details] Updated per Sam's in-person review Oops, I didn't realize Darin had already reviewed. Thanks for the review!
Ryosuke Niwa
Comment 10 2013-05-01 18:53:27 PDT
Note You need to log in before you can comment on or make changes to this bug.